--- a/GangaMarketPlace/Backend/pom.xml
+++ b/GangaMarketPlace/Backend/pom.xml
@@ -48,7 +48,28 @@
 			<groupId>jakarta.persistence</groupId>
 			<artifactId>jakarta.persistence-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.autoparams</groupId>
+			<artifactId>autoparams-lombok</artifactId>
+			<version>8.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 	</dependencies>
+
+
 
 
 	<build>
@@ -59,5 +80,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
