--- a/GangaMarketPlace/Backend/src/main/resources/application.properties
+++ b/GangaMarketPlace/Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=GangaMarketplace
-spring.datasource.url=jdbc:mysql://localhost:3306/gangamarketplace
+spring.datasource.url=jdbc:mysql://localhost:3306/users
 spring.datasource.username=root
-spring.datasource.password=2581
-
+spring.datasource.password=October_2004
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
